force-app/main/default/objects/df_122_onskat_vrdnadshavare__c/df_122_onskat_vrdnadshavare__c.object-meta.xml
<CustomObject>
    <label>Oönskat vårdnadshavare</label>
    <nameField>
        <label>Oönskat vårdnadshavare Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Oönskat vårdnadshavares</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>