force-app/main/default/objects/df_122_onskat_vrdnadshavare__c/fields/efternamn_uonskat_vrdnadshavare__c.field-meta.xml
<CustomField>
    <fullName>efternamn_uonskat_vrdnadshavare__c</fullName>
    <label>Efternamn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>