force-app/main/default/objects/df_122_onskat_vrdnadshavare__c/fields/motivering_fr_den_onskade_vrdnad_263__c.field-meta.xml
<CustomField>
    <fullName>motivering_fr_den_onskade_vrdnad_263__c</fullName>
    <label>Motivering för den oönskade vård 6eff3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>