force-app/main/default/objects/df_122_onskat_vrdnadshavare__c/fields/personnummer_uonskat_vrdnadshava_262__c.field-meta.xml
<CustomField>
    <fullName>personnummer_uonskat_vrdnadshava_262__c</fullName>
    <label>Personnummer 0bdb2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>